--- a/.migration_backup/package.json
+++ b/.migration_backup/package.json
@@ -39,11 +39,11 @@
     "@nativescript/schematics": "^9.0.0",
     "@ngtools/webpack": "~9.1.0",
     "@schematics/angular": "^10.0.0",
+    "nativescript-dev-sass": "^1.7.0",
     "nativescript-dev-webpack": "~1.5.0",
     "tns-platform-declarations": "~6.5.0",
     "tslint": "^6.1.2",
-    "typescript": "~3.8.3",
-    "node-sass": "4.12.0"
+    "typescript": "~3.8.3"
   },
   "gitHead": "3153594d609d66fab71745c881d617ac1328ea1b",
   "readme": "NativeScript Application"
